--- a/index.html
+++ b/index.html
@@ -934,7 +934,7 @@
           <div class="detail-thumbs">
             <div
               class="thumb thumb-vertical"
-              onclick="window.open('img-view.html?src=images/detail4.png', '_blank'); return false;"
+              onclick="window.open('img-view.html?src=images/detail4.jpg', '_blank'); return false;"
               style="
                 width: 180px;
                 height: 360px;
