--- a/index.html
+++ b/index.html
@@ -939,7 +939,7 @@
                 width: 180px;
                 height: 360px;
                 border-radius: 10px;
-                background-image: url('images/detail4.png');
+                background-image: url('images/detail4.jpg');
                 background-size: cover;
                 background-position: top center;
                 background-repeat: no-repeat;
